--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Welcome to Profile view!</h1>
+    <!-- <h1>Welcome to Profile view!</h1>
     <user-card name="Nisha shukla" avatar="/image/women.avif">
         <div slot="email">nisha@gmail.com</div>
         <div slot="phone">5655-456-59855</div>
@@ -22,7 +22,7 @@
         <div slot="email">tom@gmail.com</div>
         <div slot="phone">3653-634-7865</div>
         <div slot="address">USA</div>
-    </user-card>
+    </user-card>  -->
 
 
   <header>
