--- a/index.html
+++ b/index.html
@@ -11,27 +11,25 @@
 </head>
 
 <body>
-    <!-- <h1>Welcome to Profile view!</h1>
-    <user-card name="Nisha shukla" avatar="/image/women.avif">
-        <div slot="email">nisha@gmail.com</div>
+    <h1>Welcome to Profile view!</h1>
+    <user-card name="Sara" avatar="/image/woman.jpeg">
+        <div slot="email">sara@gmail.com</div>
         <div slot="phone">5655-456-59855</div>
         <div slot="address">Neuss</div>
     </user-card>
 
-    <user-card name="Tom Markus" avatar="/image/man.avif">
+    <user-card name="Tom Markus" avatar="/image/man.jpeg">
         <div slot="email">tom@gmail.com</div>
         <div slot="phone">3653-634-7865</div>
         <div slot="address">USA</div>
-    </user-card>  -->
+    </user-card>
 
 
-  <header>
     <h1>Welcome to Todays News!</h1>
-  </header>
-  <main>
-  </main>
-  <script src="./index.js" type="module"></script>
-  <script src="./userCard.js"></script>
+
+    <main></main>
+    <script src="./index.js" type="module"></script>
+    <script src="./userCard.js"></script>
 </body>
 
 </html>
