--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
 <body>
     <h1>Welcome to Profile view!</h1>
-    <user-card name="Sara" avatar="/image/woman.jpeg">
+    <user-card name="Sara" avatar="./image/woman.jpeg">
         <div slot="email">sara@gmail.com</div>
         <div slot="phone">5655-456-59855</div>
         <div slot="address">Neuss</div>
     </user-card>
 
-    <user-card name="Tom Markus" avatar="/image/man.jpeg">
+    <user-card name="Tom Markus" avatar="./image/man.jpeg">
         <div slot="email">tom@gmail.com</div>
         <div slot="phone">3653-634-7865</div>
         <div slot="address">USA</div>
