--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h1>Welcome to Todays News!</h1>
 
     <main></main>
-    <script src="./index.js" type="module"></script>
+    <script src="/Web_components/index.js" type="module"></script>
     <script src="./userCard.js"></script>
 </body>
 
