moved indexjs code to news_article

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h1>Welcome to Todays News!</h1>
 
     <main></main>
-    <script src="./index.js" type="module"></script>
+    <script src="./news-article.js" type="module"></script>
     <script src="./userCard.js"></script>
 </body>
 
