--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./style.css">
-  <link rel="manifest" href="./manifest.webmanifest">
-  <title>Welcome to Todays News!</title>
-  <script src="https://unpkg.com/@webcomponents/webcomponentsjs@^2/webcomponents-bundle.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="manifest" href="./manifest.webmanifest">
+    <title>Welcome to Todays News!</title>
 </head>
 
 <body>
@@ -29,7 +28,7 @@
     <h1>Welcome to Todays News!</h1>
 
     <main></main>
-    <script src="./news-article.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
     <script src="./userCard.js"></script>
 </body>
 
